<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/type_declaration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/balsamiqsans_regular"
        android:text="@string/type_def_text"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_declaration" />

    <TextView
        android:id="@+id/category_declaration"
        android:hint="Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/balsamiqsans_regular"
        android:text="@string/category_declaration_text"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_declaration" />

    <TextView
        android:id="@+id/source_declaration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:fontFamily="@font/balsamiqsans_regular"
        android:text="@string/source_declaration_text"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_textview" />

    <TextView
        android:id="@+id/fromdate_declaration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="428dp"
        android:fontFamily="@font/balsamiqsans_regular"
        android:text="@string/fromdate_declaration_text"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_declaration" />

    <TextView
        android:id="@+id/todate_decleration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="428dp"
        android:layout_marginEnd="97dp"
        android:fontFamily="@font/balsamiqsans_regular"
        android:text="@string/todate_declaration_text"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_declaration" />

    <TextView
        android:id="@+id/title_declaration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/balsamiqsans_regular"
        android:text="@string/title_def_text"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#008EFF"
        android:fontFamily="@font/balsamiqsans_regular"
        android:text="@string/begin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/spending_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edittext_frame"
        android:text="@string/spending_box_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/earning_checkbox"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/earning_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/edittext_frame"
        android:backgroundTint="@color/deep_blue"
        android:text="Earning"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/type_declaration"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/link_bank_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:backgroundTint="#FAD620"
        android:fontFamily="@font/balsamiqsans_regular"
        android:text="@string/link_bank_button_text"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/import_statement_button"
        app:layout_constraintStart_toEndOf="@+id/link_bank_icon"
        app:layout_constraintTop_toBottomOf="@+id/category_textview"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/import_statement_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="139dp"
        android:backgroundTint="#FAD620"
        android:fontFamily="@font/balsamiqsans_regular"
        android:text="@string/import_statement_button_text"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/import_statement_icon"
        app:layout_constraintTop_toBottomOf="@+id/category_textview" />

    <Button
        android:id="@+id/add_categories_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#9CFF85"
        android:fontFamily="@font/balsamiqsans_regular"
        android:text="@string/add_categories_button_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/category_declaration"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@drawable/edittext_frame"
        android:fontFamily="@font/balsamiqsans_regular"
        android:lineSpacingExtra="10sp"
        android:text="@string/category_textview_string"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_declaration" />

    <ImageView
        android:id="@+id/link_bank_icon"
        tools:ignore="ContentDescription"
        android:layout_width="40dp"
        android:layout_height="49dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/_200px_external_link_font_awesome_svg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/source_declaration" />

    <ImageView
        android:id="@+id/import_statement_icon"
        tools:ignore="ContentDescription"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="56dp"
        android:src="@drawable/images"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/link_bank_icon" />

    <EditText
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="Review Title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/title_declaration"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fromdate_date"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:hint="Select Date"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromdate_declaration" />

    <EditText
        android:id="@+id/todate_date"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:hint="Select Date"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todate_decleration" />

</androidx.constraintlayout.widget.ConstraintLayout>